Applied swagger for maximum routes just few pending
